--- a/style.css
+++ b/style.css
@@ -24,23 +24,22 @@ main {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 50px;
+  margin: 0 auto;
+  max-width: 80vw;
 }
 
-main > section {
-  padding: 20px;
-}
-
-main section,
-main article {
+main > section, main > article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: black;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-
 }
+
 
 section h1,
 section h2,
@@ -119,6 +118,8 @@ nav a:hover {
   text-align: center;
   margin-top: 16px; 
 }
+
+
 
 article {
   background-color: #ffc107;
