--- a/style.css
+++ b/style.css
@@ -27,26 +27,20 @@ body {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-main > section {
-  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin: 0 1rem 0 1rem;
 }
 
 main section,
 main article {
-  width: 80vw;
   color: black;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
 }
 
 section h1,
@@ -62,7 +56,7 @@ article h3 {
 }
 
 p {
-  margin-bottom: 16px;
+  gap: 12px;
 }
 
 ul li {
@@ -96,41 +90,40 @@ nav ul {
   margin-bottom: 20px;
 }
 
+.hover-img:hover {
+  scale: 1.1;
+  transition: 0.2s ease-in-out;
+}
+
 nav a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  transition:all;
 }
 
 nav a:hover {
-  color: #ffc107;   
-  border-left: 5px ;
-  transition: all .6s ease;
+  transition: 0.3s ease-in-out;
+  color: #ffc107;
 }
 
 /* Seções */
 
-#info-squirtle div {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-
 #info-squirtle img {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   align-self: center;
 }
 
-#info-squirtle img:nth-of-type(2) {
-  padding: 35px;
+#squirtle-img-2 {
+  padding: 3rem;
 }
 
-#curiosidades ul {
+#squirtle-img {
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: 0 10px;
 }
 
 #curiosidades li::marker {
@@ -144,9 +137,15 @@ nav a:hover {
   list-style: none;
 }
 
+#curiosidades ul {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 #evolucao img {
   height: 150px;
-  width: 150px;
+  margin: 0 2rem;
 }
 
 #evolucao figcaption {
@@ -169,8 +168,8 @@ a[target='_blank'] {
 }
 
 a[target='_blank']:hover {
-  opacity: 0.5;
-  transition: 0.14s ease-in-out ;
+  transition: 0.15s ease-in-out;
+  opacity: 0.4;
 }
 
 /* Footer */
@@ -179,21 +178,16 @@ footer {
   background-color: #343a40;
   color: #fff;
   padding: 20px;
-  bottom: 0;
-
   display: flex;
   flex-direction: column;
-  gap: 16px;
   align-items: center;
-}
-
-footer p {
-  margin-bottom: 0;
+  gap: 12px;
+  bottom: 0;
 }
 
 footer a {
-  text-decoration: none;
   transition: color 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 footer a[href*='#'] {
@@ -209,11 +203,27 @@ footer a[href*='tel'] {
 }
 
 footer a[href]:hover {
+  transition: 0.14s ease-in-out;
   opacity: 0.3;
-  transition: 0.14s ease-in-out ;
 }
 
-.hover-img:hover {
-    scale: 1.1;
-    transition: 400ms;
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  #evolucao figcaption {
+    font-size: 16px;
+  }
+
+  header h1 {
+    font-size: 20px;
+  }
+
+  section h2 {
+    font-size: 18px;
+  }
 }
