--- a/style.css
+++ b/style.css
@@ -24,13 +24,26 @@ body {
   font-family: 'Arial', sans-serif;
   color: #333;
   background-color: #f4f4f4;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  margin: 0 1rem 0 1rem;
+  margin: 0 20px;
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+}
+
+main > section {
+  padding: 20px;
 }
 
 main section,
@@ -41,6 +54,8 @@ main article {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 section h1,
@@ -56,7 +71,7 @@ article h3 {
 }
 
 p {
-  gap: 12px;
+  margin-bottom: 16px;
 }
 
 ul li {
@@ -75,12 +90,21 @@ header {
 
 header h1 {
   font-size: 24px;
-  text-decoration: none;
-  color: white;
 }
 
 header a {
   text-decoration: none;
+  color: white;
+}
+
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
 }
 
 /* Lista de navegação */
@@ -96,44 +120,65 @@ nav ul {
   margin-bottom: 20px;
 }
 
-.hover-img:hover {
-  scale: 1.1;
-  transition: 0.2s ease-in-out;
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 nav a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
+  transition: color 0.8s;
 }
 
 nav a:hover {
-  transition: 0.3s ease-in-out;
   color: #ffc107;
 }
 
 /* Seções */
 
 #info-squirtle img {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   align-self: center;
 }
 
-#squirtle-img-2 {
-  padding: 3rem;
-}
-
-#squirtle-img {
+#info-squirtle div {
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 0 10px;
+}
+
+#info-squirtle img,
+#evolucao img {
+  transition: transform 0.3s ease-in-out;
+}
+
+#info-squirtle img:hover,
+#evolucao img:hover {
+  transform: scale(1.1);
+}
+
+#evolucao a {
+  text-decoration: none;
+  color: black;
+}
+
+#info-squirtle img:nth-of-type(2) {
+  padding: 35px;
 }
 
 #curiosidades li::marker {
   content: '🔍';
+}
+
+#curiosidades ul {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 #evolucao ul {
@@ -143,15 +188,16 @@ nav a:hover {
   list-style: none;
 }
 
-#curiosidades ul {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+@media (max-width: 768px) {
+  #evolucao ul {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 #evolucao img {
   height: 150px;
-  margin: 0 2rem;
+  width: 150px;
 }
 
 #evolucao figcaption {
@@ -161,6 +207,12 @@ nav a:hover {
   margin-top: 16px;
 }
 
+@media (max-width: 768px) {
+  #evolucao figcaption {
+    font-size: 16px;
+  }
+}
+
 article {
   background-color: #ffc107;
   color: #fff;
@@ -168,13 +220,17 @@ article {
 
 /* Links */
 
+#recursos a,
+footer a {
+  transition: opacity 0.3s ease-in-out;
+}
+
 a[target='_blank'] {
   color: #4592c4;
   font-weight: bold;
 }
 
 a[target='_blank']:hover {
-  transition: 0.15s ease-in-out;
   opacity: 0.8;
 }
 
@@ -184,15 +240,19 @@ footer {
   background-color: #343a40;
   color: #fff;
   padding: 20px;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 12px;
+  gap: 16px;
   margin-top: auto;
 }
 
+footer p {
+  margin-bottom: 0;
+}
+
 footer a {
-  transition: color 0.3s ease-in-out;
   text-decoration: none;
 }
 
@@ -209,27 +269,5 @@ footer a[href*='tel'] {
 }
 
 footer a[href]:hover {
-  transition: 0.14s ease-in-out;
   opacity: 0.8;
-}
-
-@media (max-width: 768px) {
-  main {
-    grid-template-columns: 1fr;
-  }
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-  #evolucao figcaption {
-    font-size: 16px;
-  }
-
-  header h1 {
-    font-size: 20px;
-  }
-
-  section h2 {
-    font-size: 18px;
-  }
 }
