--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -42,7 +42,7 @@ footer {
 }
 
 main {
-  padding: 16px;
+  padding: 1rem;
 }
 
 main form {
@@ -50,41 +50,28 @@ main form {
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  width: 100%;
-  max-width: 40ch;
+  width: 40ch;
   margin: 0 auto;
 }
 
 input,
 textarea {
   width: 100%;
-  padding: 8px;
+  padding: 0.5rem;
   font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
 }
 
-input::placeholder,
+input,
 textarea::placeholder {
   font-family: 'Arial', sans-serif;
 }
 
-#save-task,
-#update-task,
-#cancel-update {
+button {
   background-color: #0074d9;
   color: #fff;
   border: none;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-
-#save-task:hover,
-#update-task:hover,
-#cancel-update:hover {
-  background-color: #005bb5;
 }
 
 ul {
@@ -94,36 +81,52 @@ ul {
   margin: 0 auto;
 }
 
-main ul li div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.open-modal {
-  background: none;
-  background-color: #676767;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.open-modal:hover {
-  background-color: #555;
-}
-
 li {
-  margin: 8px 0;
+  margin: 0.5rem 0;
   padding: 20px;
   border: solid 1px #ccc;
-  border-radius: 4px;
-  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.botao {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  margin: -3px -10px -10px auto;
+}
+
+.texto {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 li p {
   white-space: pre-wrap;
   margin-top: 10px;
+}
+
+li button {
+  background-color: #676767;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  margin: -10px -10px -10px auto;
+  border-radius: 5px;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+dialog {
+  border-radius: 5px;
 }
